added recipe for omelet

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/lasagna.html">Lasagna recipe</a>
+    <br>
+    <a href="recipes/omelet.html">Omelet recipe</a>
+
 </body>
 
 </html>
