added burger recipe

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <a href="recipes/lasagna.html">Lasagna recipe</a>
     <br>
     <a href="recipes/omelet.html">Omelet recipe</a>
+    <br>
+    <a href="recipes/burger.html">Burger recipe</a>
 
 </body>
 
