Added some basic css styling

--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Burger</title>
 </head>
 
 <body>
-    <h1>Burger</h1>
-    <img src="../img/burger.png" alt="A slice of lasanga" height=600>
-    <h2>Description</h2>
-    <p>
-        Make a juicy burger, easy and tasty!
+    <h1 id="title">Burger</h1>
+    <img class="img main" src="../img/burger.png" alt="A slice of lasanga" height=600>
+    <p class="description">
+        Make your own juicy burger, easy and tasty!
     </p>
 
     <h2>Ingredients</h2>
