--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Lasagna</title>
 </head>
 
 <body>
-    <h1>Lasagna</h1>
-    <img src="../img/lasagna.jpg" alt="A slice of lasanga" height=600>
-    <h2>Description</h2>
-    <p>Make an easy, healthy, and delicious lasagna! This recipe is suited for beginners and will make you feel like a real italian chef. Will take approximately an hour.</p>
+    <h1 id="title">Lasagna</h1>
+    <img class="img main" src="../img/lasagna.jpg" alt="A slice of lasanga" height=600>
+    <p class="description">Make an easy, healthy, and delicious lasagna! This recipe is suited for beginners and will make you feel like a real italian chef. Will take approximately an hour.</p>
 
     <h2>Ingredients</h2>
     <ul>
