--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Odin recipes</title>
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna recipe</a>
-    <br>
-    <a href="recipes/omelet.html">Omelet recipe</a>
-    <br>
-    <a href="recipes/burger.html">Burger recipe</a>
-
+    <h1 id="title">Odin Recipes</h1>
+    <ul id="recipes-list">
+        <li><a href="recipes/lasagna.html">Lasagna recipe</a></li>
+        <br>
+        <li><a href="recipes/omelet.html">Omelet recipe</a></li>
+        <br>
+        <li><a href="recipes/burger.html">Burger recipe</a></li>
+    </ul>
 </body>
 
 </html>
